# python4da

./: .RData  .Rhistory  .gitignore  .nojekyll  _quarto.yml  adsense-body.html  adsense.html  create_quarto_structure.sh  index.html  index.qmd  intro.html  lecture_material_improved.qmd  main.py  pyproject.toml  references.html  references.qmd  requirements.txt  robots.txt  search.json  sitemap.xml  styles.css  summary.html
_book/: index.html
part1/: .Rhistory  01. 데이터 로드 및 구조 점검.html  01. 데이터 로드 및 구조 점검.qmd  02. 탐색적 데이터 분석(EDA).html  02. 탐색적 데이터 분석(EDA).qmd  03. 결측치 처리.html  03. 결측치 처리.qmd  04. 이상치 탐지.html  04. 이상치 탐지.qmd  05. 스케일링.html  05. 스케일링.qmd  06. 데이터 분포 변환.html  06. 데이터 분포 변환.qmd  07. 범주형 데이터 인코딩.html  07. 범주형 데이터 인코딩.qmd  08. 연속형 데이터 범주화.html  08. 연속형 데이터 범주화.qmd  09. 불균형 데이터 처리.html  09. 불균형 데이터 처리.qmd  10. 피처 엔지니어링.html  10. 피처 엔지니어링.qmd  penguins.db  penguins.xlsx  결측치 처리.html  결측치 처리.qmd  데이터 로드 및 구조 점검.html  데이터 로드 및 구조 점검.qmd  데이터 분포 변환.html  데이터 분포 변환.qmd  범주형 데이터 인코딩.html  범주형 데이터 인코딩.qmd  불균형 데이터 처리.html  스케일링.html  스케일링.qmd  연속형 데이터 범주화.html  이상치 탐지.html  이상치 탐지.qmd  탐색적 데이터 분석(EDA).html  탐색적 데이터 분석(EDA).qmd  피처 엔지니어링.html  (+1 more)
part2/: 01. 확률분포와 표본.html  01. 확률분포와 표본.qmd  02. 정규성 검정.html  02. 정규성 검정.qmd  03. 등분산 검정.html  03. 등분산 검정.qmd  04. 적합성 및 독립성 검정.html  04. 적합성 및 독립성 검정.qmd  05. 평균 비교 검정.html  05. 평균 비교 검정.qmd  06. 분산 분석.html  06. 분산 분석.qmd  07. 비모수 검정.html  07. 비모수 검정.qmd  08. 상관 분석.html  08. 상관 분석.qmd  등분산 검정.html  분산 분석.html  분산 분석.qmd  비모수 검정.html  상관 분석.html  적합성 및 독립성 검정.html  적합성 및 독립성 검정.qmd  정규성 검정.html  평균 비교 검정.html  평균 비교 검정.qmd  (+1 more)
(+85 files in other folders)
